[gd_scene load_steps=2 format=3 uid="uid://dqm3lo5kr00pm"]

[ext_resource type="Script" path="res://Scenes/Scene Container/campaigncreation/scripts/NewCampaignTutorial.gd" id="1_script"]

[node name="NewCampaignTutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -66.0
offset_right = 100.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Choose Tutorial Option"
horizontal_alignment = 1

[node name="StoryTrackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Story Track Tutorial"

[node name="CompendiumButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Compendium Tutorial"

[node name="SkipButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Skip Tutorial"
